# CSA_2_c-

./: Ball.cpp  Ball.h  CMakeLists.txt  Figure.cpp  Figure.h  Parallelepiped.cpp  Parallelepiped.h  README.md  Tetrahedron.cpp  Tetrahedron.h  main.cpp
tests/: out01.txt  test03.txt  test04.txt
